refactor(theme): apply theme tokens across components

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1,7 +1,25 @@
+:root {
+  --bg-primary-color: #fff;
+  --text-primary-color: #000;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-primary-color: #151515;
+    --text-primary-color: #ffffff;
+  }
+
+  .header-logo {
+    filter: invert(1);
+  }
+}
+
 html,
 body,
 #root {
   height: 100%;
+  background: var(--bg-primary-color);
+  color: var(--text-primary-color);
 }
 
 .rs-link {
@@ -96,10 +114,12 @@ thead.ant-table-thead > tr > th {
   .no-print {
     display: none !important;
   }
+
   .print-black {
     color: black !important;
     background-color: white !important;
   }
+
   .print-no-padding {
     padding: 0 !important;
     margin: 0 !important;
