--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -29,6 +29,11 @@ textarea::-webkit-scrollbar-track {
   margin: calc(var(--scroll-size) / 2);
 }
 
+textarea {
+  resize: none !important;
+}
+
+
 .dark .header-logo,
 .dark .login-image {
   filter: invert(1);
